--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -171,7 +171,7 @@ main {
   padding:1rem;
   margin:auto;
   font-size:1rem;
-  line-height:200%;
+  line-height:180%;
   position:relative;
   overflow-wrap:break-word;
   word-wrap:break-word;
@@ -185,6 +185,9 @@ main {
 
   h1 {
     margin-top:3rem;
+  }
+  h2 {
+    margin: 0px 0px 10px 0px;
   }
   h1, .sh1 { font-size:1.75rem; }
   h2, .sh2 { font-size:1.375rem; }
