--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -587,7 +587,7 @@ main {
   }
   h2, .sh2 {
     font-size:1.75rem;
-    margin-top:4rem;
+    //margin-top:4rem;
   }
   h3, .sh3 {
     font-size:1.375rem;
