--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -536,7 +536,7 @@ main {
 .post-title { font-size:2.25rem; }
 
 .post-info { 
-  //margin-top:4rem; 
+  margin-top:0rem; 
   font-size:1.25rem;
 
   svg { width:20px; }
