--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -51,8 +51,9 @@
   -webkit-transform:translate(-50%, -50%);
   -moz-transform:translate(-50%, -50%);
   transform:translate(-50%, -50%);
-  width:100%;
+  width:calc(100% - 20px);
   margin:auto;
+  border-radius: 10px;
   padding:1rem 0;
   text-align:center;
   backdrop-filter:blur(4px);
@@ -68,7 +69,7 @@
 }
 
 .post-info {
-  //margin-top:1.25rem;
+  margin-top:0rem;
   font-size:0.875rem;
 
   svg { width:14px; }
