--- a/_sass/toc.scss
+++ b/_sass/toc.scss
@@ -7,9 +7,9 @@
 .toc-header {
   font-size:1.25rem;
   font-weight:600;
-  padding:0 0 4px 12px;
+  padding:0 0 4px 0px;
   border-bottom:burlywood 2px solid;
-
+  margin-left: 30px;
   svg { 
     width:16px;
     display:inline-flex;
