--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -322,7 +322,7 @@ main {
 
   blockquote {
     background:$color-beige;
-    border-left:4px solid burlywood;
+    border-left:4px solid f2747f;
     border-radius:4px;
     box-shadow:0 1px 2px rgba(0,0,0,.15), 0 3px 10px rgba(0,0,0,.1);
     padding-left:1rem;
@@ -373,7 +373,7 @@ main {
     border:0;
     height:2px;
     margin:1rem 0;
-    background:burlywood;
+    background:f2747f;
   }
 
   img + em {
