--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -128,7 +128,7 @@
     width:4px;
     background-color:#aaa;
   }
-  &::-webkit-scrollbar-thumb { background-color:f2747f; }
+  &::-webkit-scrollbar-thumb { background-color:#f2747f; }
 }
 
 .nav-item { border:none; }
