--- a/_sass/toc.scss
+++ b/_sass/toc.scss
@@ -8,7 +8,7 @@
   font-size:1.25rem;
   font-weight:600;
   padding:0 0 4px 0px;
-  border-bottom:f2747f 2px solid;
+  border-bottom:#f2747f 2px solid;
   margin-left: 20px;
   svg { 
     width:16px;
