--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,7 +47,11 @@ mark { background-color:transparent; }
 
 
 
-
+.bg-grey{
+  background: #f0f0f0;
+  border-radius: 10px;
+  padding: 10px;
+}
 svg {
   width:16px;
   aspect-ratio:1.0;
