div bold class add

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,6 +52,9 @@ mark { background-color:transparent; }
   border-radius: 10px;
   padding: 10px;
 }
+.div-bold{
+  font-weight: bold;
+}
 svg {
   width:16px;
   aspect-ratio:1.0;
