--- a/_sass/darkmode.scss
+++ b/_sass/darkmode.scss
@@ -205,6 +205,11 @@ main {
   background: #292929;
   border-radius: 10px;
   padding: 10px;
+  color: #AAAAAA;
 }
 
+.div-bold{
+  color: lightgrey;
+  font-weight: bold;
+}
 }
