--- a/_sass/pagination.scss
+++ b/_sass/pagination.scss
@@ -43,10 +43,11 @@
   margin: 10px;
   list-style-type:none;
   height:fit-content;
+  border-bottom: 1px solid lightgray;
 }
 
 #article_content {
-  border-bottom:2px solid lightgrey;
+  border-bottom:0px solid lightgrey;
 
   .thumbnail_post {
     display:block;
@@ -164,8 +165,10 @@
 
 .paginated-list { margin:auto 2rem; }
 .paginated-item {
-  margin:3rem 0;
+  margin:1.5rem 0;
   height:12.5rem;
+  padding-bottom: 1.5rem;
+  border-bottom: 1px solid lightgray;
 }
 
 #article_content {
