--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -26,6 +26,7 @@
     text-align:center;
     width:100%;
     margin:auto;
+    border-radius: 10px;
   }
   .img-xs { width:12.5% !important; }
   .img-sm { width:25% !important; }
@@ -388,7 +389,8 @@ main {
 #related-box {
   margin-top:2rem;
 
-  span { font-size:1.25rem; }
+  span { font-size:1.25rem; 
+    font-family: 'Ownglyph_ryuttung-Rg' ;}
 
   svg { 
     width:20px;
@@ -606,7 +608,8 @@ main {
 #related-box {
   margin-top:4rem;
 
-  span { font-size:1.5rem; }
+  span { font-size:1.5rem; 
+    font-family: 'Ownglyph_ryuttung-Rg' ;}
 
   svg { width:24px; }
 }
