--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,7 +28,7 @@ html, body {
 
 .fonts-loaded {
   span, p { font-family: 'Pretendard-Regular'; }
-  a, h1, h2, h3, mark {font-family: 'Ownglyph_ryuttung-Rg' }
+  a, h1, h2, h3, mark, #related-box span {font-family: 'Ownglyph_ryuttung-Rg' }
 }
 
 a { text-decoration:none; }
@@ -37,6 +37,9 @@ a, span, p {  font-family: 'Pretendard-Regular'; }
 h1, h2, h3, mark {
   	margin:0;
 	font-family: 'Ownglyph_ryuttung-Rg' ;
+}
+#related-box span{
+  font-family: 'Ownglyph_ryuttung-Rg' ;
 }
 mark { background-color:transparent; }
 
