--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -414,7 +414,8 @@ main {
     list-style:none;
     transition:.3s;
     overflow: hidden;
-
+    border-radius: 10px;
+    
     &:hover {
       box-shadow:8px 8px 16px -4px rgba(0, 0, 255, .2);
 
@@ -613,7 +614,7 @@ main {
 }
 
 #related-posts {
-  li { width:30%; }
+  li { width:30%; border-radius: 10px;}
   li:nth-child(3n+1) { margin-left:0; }
 }
 
