--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -239,10 +239,10 @@ main {
 
   code {
     margin:0 2px;
-    padding:1px 5px;
-    border:1px solid #eaeaea;
+    padding:2px 5px;
+    //border:1px solid #eaeaea;
     background-color:#f4f4f4;
-    border-radius:3px;
+    border-radius:5px;
     font-family:'Courier New', Courier, monospace;
     color:$color-darkorange;
     position:relative;
@@ -321,7 +321,7 @@ main {
   }
 
   blockquote {
-    background:$color-beige;
+    background:#f2f2f2;
     border-left:4px solid #f2747f;
     border-radius:4px;
     box-shadow:0 1px 2px rgba(0,0,0,.15), 0 3px 10px rgba(0,0,0,.1);
