--- a/_sass/darkmode.scss
+++ b/_sass/darkmode.scss
@@ -103,11 +103,11 @@ main {
   }
 }
 
-#related-box span { color:rgb(225, 183, 78); }
+#related-box span { color:#ccc; }
 #related-posts .title { color:#ccc; }
 #related-posts li:hover { box-shadow:8px 8px 16px -4px rgba(255, 255, 255, .2); }
 
-.category-tree a { color:rgb(225, 183, 78); }
+.category-tree a { color:#ccc; }
 
 .category-header {
   color:#ccc;
@@ -120,7 +120,7 @@ main {
   .box_contents { background-image:none; }
 
   .txt_post { color:#aaa; }
-  .title_post { color:rgb(225, 183, 78); }
+  .title_post { color:#ccc; }
   .date { color:#ccc; }
   .category { color:mediumseagreen; }
 }
