--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -223,8 +223,9 @@ main {
     }
   }
 
-  p, ul, table, div { margin-bottom:3rem; }
-
+  //p, ul, table, div { margin-bottom:3rem; }
+  ul, table, div { margin-bottom:3rem; 
+    
   p + div,
   p + pre,
   p + blockquote,
