--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -224,7 +224,7 @@ main {
   }
 
   ul, table, div { margin-bottom:3rem; }
-
+  p {margin-bottom: 10px;}
   p + div,
   p + pre,
   p + blockquote,
@@ -332,7 +332,7 @@ main {
 
     p {
       margin:0;
-      padding:1rem 0;
+      padding:10px 0;
     }
   }
 
