--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -325,7 +325,7 @@ main {
 
   blockquote {
     background:#f2f2f2;
-    border-left:4px solid #f2747f;
+    border-left:4px solid rgb(152, 163, 190);
     border-radius:4px;
     box-shadow:0 1px 2px rgba(0,0,0,.15), 0 3px 10px rgba(0,0,0,.1);
     padding-left:1rem;
@@ -342,6 +342,7 @@ main {
   .table-wrapper { overflow-x:auto; }
 
   table {
+    margin-bottom: 10px;
     display:block;
     max-width:-moz-fit-content;
     max-width:fit-content;
@@ -374,7 +375,7 @@ main {
     border:0;
     height:2px;
     margin:1rem 0;
-    background:#f2747f;
+    background:rgb(152, 163, 190);
   }
 
   img + em {
@@ -488,7 +489,7 @@ main {
   bottom:2rem;
   right:2rem;
   width:48px;
-  background:rgba(100, 200, 200, 0.75);
+  background:rgb(152, 163, 190);
   cursor:pointer;
 
   &, &:before{
