--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -32,7 +32,7 @@
       width:8px;
       background-color:#ddd;
     }
-    &::-webkit-scrollbar-thumb { background-color:#f2747f; }
+    &::-webkit-scrollbar-thumb { background-color:rgb(152, 163, 190); }
   }
 
   &.active{ display:flex; }
