--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -139,7 +139,7 @@
     width:2.75rem;
     aspect-ratio:1;
     text-align:center;
-    background:#ffe390;
+    background:rgb(230, 231, 237);
     border:none;
     border-radius:50%;
     margin-left:1rem;
@@ -156,11 +156,11 @@
   @keyframes leaves {
     0% {
       transform:scale(1.0);
-      background:#ffe390;
+      background:rgb(230, 231, 237);
     }
     100% {
       transform:scale(1.25);
-      background:#ffd044;
+      background:rgb(230, 231, 237);
     }
   }
 
