--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -47,7 +47,7 @@
 .nav-item {
   position:relative;
   padding:12px;
-  border-bottom:1px solid #aaa;
+  border-bottom:1px dashed #ffffff;
 
   &.selected {
     span {
@@ -85,14 +85,14 @@
 
   &:hover {
     transform:scale(1.25);
-    svg { fill:$color-darkorange; }
+    svg { fill:rgb(152, 163, 190); }
   }
 }
 
 .nav-lh svg {
   margin-left:-0.25rem;
   position:relative;
-  fill:rgb(230, 231, 237);
+  fill:rgb(152, 163, 190);
   transform:translateY(-2px);
 }
 .nav-sh svg { 
@@ -157,14 +157,14 @@
     display:block;
     left:0;
     border-radius:1.5rem;
-    background:rgba(gold, .375);
+    background:rgba(rgb(230, 231, 237), .375);
     width:3rem;
     height:3rem;
     transition:.3s;
   }
   &:hover:before {
     width:105%;
-    background:gold;
+    background:rgb(230, 231, 237);
   }
 
   svg { transform:none; }
