--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -39,7 +39,7 @@
 }
 
 .wave {
-  background:rgba(253, 177, 55, 0.5);
+  background:rgb(152, 163, 190);
   border-radius:0 0 250% 250%;
   position:fixed;
   width:200%;
@@ -86,8 +86,8 @@
   input {
     font-size:1.25rem;
     padding:8px;
-    border:2px solid #aaa;
     background:none;
+    border-radius: 10px;
   }
 }
 
@@ -103,9 +103,11 @@
     top:0;
     left:0;
     z-index:-1;
+    border-radius: 10px;
   }
   &:before { background:#fff; }
-  &:after { background-image:url($baseurl + '/assets/img/tile.png'); }
+
+  
 
   button {
     position:absolute;
