--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -342,7 +342,7 @@ main {
   .table-wrapper { overflow-x:auto; }
 
   table {
-    margin-bottom: 10px;
+    margin: 0 0 10px 0;
     display:block;
     max-width:-moz-fit-content;
     max-width:fit-content;
