--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,12 +9,6 @@ $baseurl: "{{ site.baseurl }}";
     font-style: normal;
 }
 @font-face {
-    font-family: 'NanumSquareNeoLight';
-    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumSquareNeo/NanumSquareNeoTTF-aLt.eot);
-    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumSquareNeo/NanumSquareNeoTTF-aLt.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumSquareNeo/NanumSquareNeoTTF-aLt.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumSquareNeo/NanumSquareNeoTTF-aLt.ttf) format("truetype");
-}
-
-@font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
@@ -27,41 +21,18 @@ html, body {
 }
 
 .fonts-loaded {
-  span, p, h1, h2, h3, p.category, p.date, p.title , #related-box span, main *{ font-family: 'Pretendard-Regular'; }
+  span, p, h1, h2, h3, p.category, p.date, p.title , #related-box span{ font-family: 'Pretendard-Regular'; }
   a, mark {font-family: 'Ownglyph_ryuttung-Rg'}
 }
 
+a, span, p, p.category, p.date, p.title, span.post-title, h1, h2, h3, mark {font-family: 'Pretendard-Regular'}
+.tag-box span, span.info-box, #contact span, a.info-box.category-box .category-tree *{ font-family: 'Ownglyph_ryuttung-Rg' !important;}
+
 a { text-decoration:none; }
 a, span, p, h1, h2, h3, i { color:#3A241A; }
-a, span, p {  font-family: 'Pretendard-Regular'; }
-h1, h2, h3, mark {
-  margin:0;
-	 font-family: 'Pretendard-Regular';
-}
-mark{
-  margin:0;
-	font-family: 'Ownglyph_ryuttung-Rg' ;
-}
-#related-box span{
-  font-family: 'Ownglyph_ryuttung-Rg' ;
-}
-mark { background-color:transparent; }
+mark{  background-color:transparent; }
+h1, h2, h3, mark {margin:0;}
 
-
-.tag-box span, span.post-title, span.info-box, #contact span, a.info-box.category-box .category-tree *{
-  font-family: 'Ownglyph_ryuttung-Rg' !important;
-}
-p.category, p.date, p.title {font-family: 'Pretendard-Regular' !important}
-
-span.div-bold{
-  font-weight:bold;
-}
-.bg-grey{
-  background: #f2f2f2;
-  border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 10px;
-}
 
 svg {
   width:16px;
@@ -70,7 +41,6 @@ svg {
   display:block;
   margin:auto;
 }
-
 button {
   border:none;
   background:none;
