--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -115,9 +115,10 @@
 .tag {
   float:left;
   position:relative;
-  margin:8px 12px;
-  padding:0 10px 0 12px;
+  margin:8px 4px;
+  padding:0;
   line-height:1.5rem;
+  border-radius: 5px;
   color:#fff !important;
   font-size:1rem;
   text-shadow:0 1px 2px rgba(0,0,0,0.6);
@@ -129,8 +130,10 @@
     left:-12px;
     border-style:solid;
     border-width:12px 12px 12px 0;
+    display: none;
   }
   &:after {
+    display: none;
     content:"";
     position:absolute;
     top:10px;
@@ -156,11 +159,11 @@
 }
 
 .theme-0 {
-  background:hsl(50, 65%, 50%);
-  &::before { border-color:transparent hsl(50, 65%, 50%) transparent transparent; } 
+  background:#98a3be;
+  &::before {border-color:transparent hsl(50, 65%, 50%) transparent transparent; } 
 }
 .theme-1 { 
-  background:hsl(360, 65%, 50%);
+  background:lightgray;
   &::before { border-color:transparent hsl(360, 65%, 50%) transparent transparent; }
 }
 .theme-2 { 
@@ -330,7 +333,7 @@ main {
     box-shadow:0 1px 2px rgba(0,0,0,.15), 0 3px 10px rgba(0,0,0,.1);
     padding-left:1rem;
     padding-right:1rem;
-    margin:8px auto;
+    margin:10px auto;
     word-break:break-all;
 
     p {
@@ -350,10 +353,9 @@ main {
     white-space:nowrap;
     position:relative;
     background-color:#fff;
-    border-radius:10px;
+    border-radius:5px;
     border-collapse:collapse;
     line-height:1.5;
-    box-shadow:0 0 40px 0 rgba(0,0,0,.15);
 
     th, td {
       border:1px solid lightgrey;
@@ -369,7 +371,7 @@ main {
     td:last-child, th:last-child { border-right:0; }
   }
 
-  li { padding:4px 0; }
+  li { padding-bottom:4px 0; }
 
   hr {
     border:0;
