tag update ver 3

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -116,7 +116,7 @@
   float:left;
   position:relative;
   margin:8px 4px;
-  padding:0;
+  padding:0 10px 0 12px;
   line-height:1.5rem;
   border-radius: 5px;
   color:#fff !important;
