--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -115,7 +115,7 @@
 .tag {
   float:left;
   position:relative;
-  margin:8px 4px;
+  margin:8px 8px 0 0;
   padding:0 10px 0 12px;
   line-height:1.5rem;
   border-radius: 5px;
@@ -569,7 +569,7 @@ main {
 }
 
 .tag {
-  margin:12px 16px; 
+  margin:12px 8px 0 0; 
   padding:0 14px 0 16px;
   line-height:2rem;
   font-size:1rem;
