--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,8 +25,8 @@ html, body {
   a, mark {font-family: 'Ownglyph_ryuttung-Rg'}
 }
 
-a, span, p, p.category, p.date, p.title, span.post-title, h1, h2, h3, mark, a.txt_post, li, ul,th, td {font-family: 'Pretendard-Regular' !important}
-.tag-box span, span.info-box, #contact span, a.info-box.category-box .category-tree *{ font-family: 'Ownglyph_ryuttung-Rg' !important;}
+a, span, p, p.category, p.date, p.title, span.post-title, h1, h2, h3, a.txt_post, li, ul,th, td {font-family: 'Pretendard-Regular' !important}
+.tag-box span, span.info-box, #contact span, a.info-box.category-box .category-tree *, mark{ font-family: 'Ownglyph_ryuttung-Rg' !important;}
 
 a { text-decoration:none; }
 a, span, p, h1, h2, h3, i { color:#3A241A; }
