--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@ html, body {
   a, mark {font-family: 'Ownglyph_ryuttung-Rg'}
 }
 
-a, span, p, p.category, p.date, p.title, span.post-title, h1, h2, h3, a.txt_post, li, ul,th, td {font-family: 'Pretendard-Regular' !important}
+a, span, p, p.category, p.date, p.title, span.post-title, h1, h2, h3, a.txt_post, li, ul,th, td {font-family: 'Pretendard-Regular' }
 .tag-box span, span.info-box, #contact span, a.info-box.category-box .category-tree *, mark{ font-family: 'Ownglyph_ryuttung-Rg' !important;}
 
 a { text-decoration:none; }
