--- a/_sass/darkmode.scss
+++ b/_sass/darkmode.scss
@@ -122,7 +122,7 @@ main {
   .txt_post { color:#aaa; }
   .title_post { color:#ccc; }
   .date { color:#ccc; }
-  .category { color:mediumseagreen; }
+  .category { color:#98a3be; }
 }
 
 .pagination-number,
