hover color update

--- a/_sass/pagination.scss
+++ b/_sass/pagination.scss
@@ -85,9 +85,9 @@
   }
   .title_post:hover,
   .category:hover {
-    color:$color-rose;
+    color:#98a3be;
   }
-  .category{ color:mediumseagreen !important; }
+  .category{ color:#98a3be !important; }
 
   .txt_post {
     display:-webkit-box;
