--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,12 +30,12 @@ html, body {
 .fonts-loaded {
   span, p, h1, h2, h3, p.category, p.date, p.title , #related-box span, li, ul, th, td{ font-family: 'Pretendard-Regular'; }
   a, mark {font-family: 'Ownglyph_ryuttung-Rg'}
-  code {font-family: 'goorm-sans-code';}
+  code *{font-family: 'goorm-sans-code';}
 }
 
 a, span, p, p.category, p.date, p.title, span.post-title, h1, h2, h3, a.txt_post, li, ul,th, td {font-family: 'Pretendard-Regular' }
 .tag-box span, span.info-box, #contact span, a.info-box.category-box .category-tree *, mark{ font-family: 'Ownglyph_ryuttung-Rg' !important;}
-code {font-family: 'goorm-sans-code';}
+code *{font-family: 'goorm-sans-code' !important;}
 
 a { text-decoration:none; }
 a, span, p, h1, h2, h3, i { color:#3A241A; }
