--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -346,8 +346,7 @@ main {
   table {
     margin: 0 0 10px 0;
     display:block;
-    max-width:-moz-fit-content;
-    max-width:fit-content;
+    width: 100%;
     overflow-x:auto;
     white-space:nowrap;
     position:relative;
