--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -355,6 +355,9 @@ main {
     border-collapse:collapse;
     line-height:1.5;
 
+    tbody{
+      width: 100%;
+    }
     thead{
       width: 100%;
     }
