--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,9 @@
     {% endif %}
 </title>
 {% seo %}
-	
-<script src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.5.3/MathJax.js?config=TeX-AMS-MML_SVG"></script>
+{% if page.use_math %}
+	{% include mathjax_support.html %}
+{% endif %}
 <link rel="shortcut icon" type="image/png" href="{{ site.logo_img | prepend: site.baseurl }}">
 <style>
 @font-face {
