--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,5 +15,9 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
+
+  {% if page.sidebar_main %}   <!--추가-->
+    {% include nav_list %}     <!--추가-->
+  {% endif %}   
   </div>
 {% endif %}
