--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -107,11 +107,9 @@ abbr[data-original-title] {
 /* blockquotes */
 
 blockquote {
-  margin-block: 2em;
-  margin-inline-end: 1em;
+  margin: 0;
   padding-inline: 1em;
-  font-style: italic;
-  border-inline-start: 0.25em solid $primary-color;
+  border-inline-start: 0.2em solid $primary-color;
 
   cite {
     font-style: italic;
