--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -107,9 +107,12 @@ body {
 	}
 
   p,
-  li,
   dl {
     font-size: 0.725em;
+  }
+
+  li{
+    font-size: 0.9rem;
   }
 
   /* paragraph indents */
@@ -138,7 +141,7 @@ body {
   :not(pre) > code {
     padding-top: 0.1rem;
     padding-bottom: 0.1rem;
-    font-size: 0.8em;
+    font-size: 0.9em;
     background: $code-background-color;
     border-radius: $border-radius;
 
