--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,9 +14,8 @@
   {% endfor %}
 {% endif %}
 
-{% if page.sidebar_main %}   <!--추가-->
-  {% include nav_list %}     <!--추가-->
-{% endif %}                  <!--추가-->
-
+{% if page.sidebar.nav %}
+{% include nav_list nav=page.sidebar.nav %}
+{% endif %}
 </div>
 {% endif %}
