--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -61,6 +61,12 @@
   }
 }
 
+.entries-list{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+}
+
 /* remove border*/
 .page__content {
   .archive__item-title {
