--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -61,8 +61,8 @@
   }
 }
 
-.entries-list{
-  display: grid;
+div.entries-list{
+  display: grid !important;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
 }
