--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -35,11 +35,11 @@ h6 {
 
 h1 {
   margin-top: 0;
-  font-size: $h-size-1;
+  font-size: 30px;
 }
 
 h2 {
-  font-size: $h-size-2;
+  font-size: 25px;
 }
 
 h3 {
@@ -109,8 +109,14 @@ abbr[data-original-title] {
 blockquote {
   margin: 0;
   padding-inline: 1em;
-  border-inline-start: 0.2em solid $primary-color;
+  border-inline-start: 3px solid $primary-color;
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-radius: 3px 5px 5px 3px;
 
+  p{
+    margin: 0 !important;
+  }
   cite {
     font-style: italic;
 
