--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -57,8 +57,14 @@
   p,
   li {
     font-family: $sans-serif;
-    font-size: $type-size-6;
     line-height: 1.5;
+  }
+  p{
+    font-size: $type-size-6;
+
+  }
+  li{
+    font-size: 13px;
   }
 
   img {
