--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -83,7 +83,7 @@
   display: block;
   list-style-type: none;
   white-space: nowrap;
-
+  font-size: 17px;
   &--lg {
     padding-inline-end: 2em;
     font-weight: 700;
