--- a/_sass/minimal-mistakes/_tables.scss
+++ b/_sass/minimal-mistakes/_tables.scss
@@ -6,7 +6,7 @@ table {
   margin-bottom: 1em;
   width: 100%;
   font-family: $global-font-family;
-  font-size: 0.7rem;
+  font-size: 15px;
   border-collapse: collapse;
   overflow-x: auto;
 
