--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -9,7 +9,7 @@ figure.highlight {
   background: $base00;
   color: $base05;
   font-family: $monospace;
-  font-size: 0.6rem;
+  font-size: 13px;
   line-height: 1.8;
   border-radius: $border-radius;
 
