--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -119,7 +119,7 @@ body {
   p {
     //margin: 0 0 $indent-var;
 
-    line-height: 35px;
+    line-height: 25px;
     /* sibling indentation*/
     @if $paragraph-indent == true {
       & + p {
@@ -143,7 +143,7 @@ body {
     padding-top: 0.1rem;
     padding-bottom: 0.1rem;
     font-size: 14px;
-    background: $code-background-color;
+    background: #f5f5f5;
     border-radius: $border-radius;
 
     &::before,
