--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -143,7 +143,7 @@ body {
     padding-top: 0.1rem;
     padding-bottom: 0.1rem;
     font-size: 14px;
-    background: #f5f5f5;
+    background: #dfe1e5;
     border-radius: $border-radius;
 
     &::before,
