서치콘솔 등록

--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -514,6 +514,7 @@ a.reversefootnote {
 pre {
   &.highlight .clipboard-copy-button {
     color: #ffffca;
+    width: 110px;
   }
 
   .clipboard-copy-button {
