--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -45,7 +45,7 @@
 }
 
 .page__footer-copyright {
-  font-family: $global-font-family;
+  font-family: $is-yun;
   font-size: $type-size-7;
 }
 
@@ -60,7 +60,7 @@
     display: inline-block;
     padding-top: 5px;
     padding-bottom: 5px;
-    font-family: $sans-serif-narrow;
+    font-family: $is-yun;
     font-size: $type-size-6;
     text-transform: uppercase;
   }
