--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -51,12 +51,12 @@
   h5,
   h6 {
     margin-bottom: 0;
-    font-family: $sans-serif-narrow;
+    font-family: $is-yun;
   }
 
   p,
   li {
-    font-family: $sans-serif;
+    font-family: $is-yun;
     line-height: 1.5;
   }
   p{
@@ -177,7 +177,7 @@
   }
 }
 .sidebar .author__name {
-  font-family: $sans-serif;
+  font-family: $is-yun;
   font-size: $type-size-5;
 }
 
@@ -194,7 +194,7 @@
   position: relative;
   display: table-cell;
   vertical-align: middle;
-  font-family: $sans-serif;
+  font-family: $is-yun;
   z-index: 20;
   cursor: pointer;
 
